Updated stay and play content

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         </div>
     </section>
 
-    <!-- Promotional Banner -->
+    <!-- Original Promotional Banner (Commented Out) -->
+    <!--
     <section class="promo-banner">
         <div class="container">
             <div class="promo-badge animated-badge">
@@ -93,6 +94,26 @@
                         <p class="promo-time"><i class="fas fa-clock"></i> 3:00 PM - 4:30 PM</p>
                         <p class="promo-desc">Join us for a fun-filled hour of activities and see what makes us special!</p>
                         <a href="#contact" class="promo-cta pulse-button">Book Your Free Session Now!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    -->
+
+    <!-- New Coming Soon Banner -->
+    <section class="promo-banner">
+        <div class="container">
+            <div class="promo-badge animated-badge">
+                <div class="promo-content">
+                    <div class="sparkle-badge">
+                        <i class="fas fa-star sparkle-1"></i>
+                        <i class="fas fa-star sparkle-2"></i>
+                        <i class="fas fa-star sparkle-3"></i>
+                        <h3>✨ FREE Stay & Play Session Coming Soon! ✨</h3>
+                        <p class="promo-desc">Keep watching this space - we'll announce our next session date soon!</p>
+                        <p class="promo-desc"><i class="fas fa-bell"></i> Exciting activities and fun-filled experiences await!</p>
+                        <a href="#contact" class="promo-cta pulse-button">Register Your Interest</a>
                     </div>
                 </div>
             </div>
