Removed stay and play  banner

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
         </div>
     </section>
 
-    <!-- Original Promotional Banner (Commented Out) -->
+    <!-- Promotional Banners (Commented Out) -->
     <!--
+    Original Stay & Play Banner
     <section class="promo-banner">
         <div class="container">
             <div class="promo-badge animated-badge">
@@ -99,9 +100,8 @@
             </div>
         </div>
     </section>
-    -->
 
-    <!-- New Coming Soon Banner -->
+    Coming Soon Banner
     <section class="promo-banner">
         <div class="container">
             <div class="promo-badge animated-badge">
@@ -119,6 +119,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- Benefits Section -->
     <section class="section">
