Updated open days and email

--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
                         <p>I enjoy engaging children through art, crafts, and play-based learning. In holiday club settings, I aim to foster a fun, inclusive atmosphere that supports emotional well-being, encourages self-expression, and promotes positive social interaction. I look forward to bringing my energy, experience, and care to your team and contributing to a meaningful and memorable experience for every child.</p>
                         <div class="member-contact">
                             <p><i class="fas fa-phone"></i> Phone: <a href="tel:+447405337104">07405 337104</a></p>
-                            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:info@felthamfunholidayclub.uk">info@felthamfunholidayclub.uk</a></p>
+                            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:contact@felthamfunholidayclub.uk">contact@felthamfunholidayclub.uk</a></p>
                         </div>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
                         <p>My passion lies in creating a holiday club where curiosity and having fun is encouraged at every turn. I believe every child deserves a dedicated space to grow, explore their interests, and truly shine. Through engaging activities, patient guidance, and a warm, welcoming approach, I strive to help children build confidence, develop new skills, and create lasting friendships in a safe and nurturing environment.</p>
                         <div class="member-contact">
                             <p><i class="fas fa-phone"></i> Phone: <a href="tel:+447424776158">07424 776158</a></p>
-                            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:info@felthamfunholidayclub.uk">info@felthamfunholidayclub.uk</a></p>
+                            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:contact@felthamfunholidayclub.uk">contact@felthamfunholidayclub.uk</a></p>
                         </div>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
                     <h4>Contact Info</h4>
                     <p><i class="fas fa-phone"></i> Vanashree Trivedi: <a href="tel:+447405337104">07405 337104</a></p>
                     <p><i class="fas fa-phone"></i> Elvia Acosta: <a href="tel:+447424776158">07424 776158</a></p>
-                    <p><i class="fas fa-envelope"></i> <a href="mailto:info@felthamfunholidayclub.uk">info@felthamfunholidayclub.uk</a></p>
+                    <p><i class="fas fa-envelope"></i> <a href="mailto:contact@felthamfunholidayclub.uk">contact@felthamfunholidayclub.uk</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
