--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
         </div>
     </section>
 
-    <!-- Promotional Banners (Commented Out) -->
-    <!--
-    Original Stay & Play Banner
+    <!-- Promotional Banner -->
     <section class="promo-banner">
         <div class="container">
             <div class="promo-badge animated-badge">
@@ -90,36 +88,16 @@
                         <i class="fas fa-star sparkle-1"></i>
                         <i class="fas fa-star sparkle-2"></i>
                         <i class="fas fa-star sparkle-3"></i>
-                        <h3>✨ FREE Stay & Play Session! ✨</h3>
-                        <p class="promo-date"><i class="fas fa-calendar-alt"></i> Monday, 27th October 2025</p>
+                        <h3>✨ Open Day! ✨</h3>
+                        <p class="promo-date"><i class="fas fa-calendar-alt"></i> Sunday, 9th November 2025</p>
                         <p class="promo-time"><i class="fas fa-clock"></i> 3:00 PM - 4:30 PM</p>
-                        <p class="promo-desc">Join us for a fun-filled hour of activities and see what makes us special!</p>
-                        <a href="#contact" class="promo-cta pulse-button">Book Your Free Session Now!</a>
+                        <p class="promo-desc">Join us for a fun-filled session of activities and see what makes us special!</p>
+                        <a href="#contact" class="promo-cta pulse-button">Book Your Spot Now!</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-    Coming Soon Banner
-    <section class="promo-banner">
-        <div class="container">
-            <div class="promo-badge animated-badge">
-                <div class="promo-content">
-                    <div class="sparkle-badge">
-                        <i class="fas fa-star sparkle-1"></i>
-                        <i class="fas fa-star sparkle-2"></i>
-                        <i class="fas fa-star sparkle-3"></i>
-                        <h3>✨ FREE Stay & Play Session Coming Soon! ✨</h3>
-                        <p class="promo-desc">Keep watching this space - we'll announce our next session date soon!</p>
-                        <p class="promo-desc"><i class="fas fa-bell"></i> Exciting activities and fun-filled experiences await!</p>
-                        <a href="#contact" class="promo-cta pulse-button">Register Your Interest</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    -->
 
     <!-- Benefits Section -->
     <section class="section">
@@ -210,7 +188,7 @@
                     </div>
                     <h3 class="benefit-title">Fee Information</h3>
                     <p class="benefit-text">
-                        For current rates and session availability, email us at <a href="mailto:info@felthamfunholidayclub.uk" class="highlight-text">info@felthamfunholidayclub.uk</a>. Ask about our <span class="highlight-text">sibling discounts</span> and flexible payment options!
+                        For current rates and session availability, email us at <a href="mailto:contact@felthamfunholidayclub.uk" class="highlight-text">contact@felthamfunholidayclub.uk</a>. Ask about our <span class="highlight-text">sibling discounts</span> and flexible payment options!
                     </p>
                 </div>
             </div>
@@ -603,7 +581,7 @@
                                 <div class="contact-col">
                                     <i class="fas fa-envelope"></i>
                                     <div class="contact-text">
-                                        <a href="mailto:info@felthamfunholidayclub.uk">info@felthamfunholidayclub.uk</a>
+                                        <a href="mailto:contact@felthamfunholidayclub.uk">contact@felthamfunholidayclub.uk</a>
                                     </div>
                                 </div>
                             </div>
@@ -667,7 +645,7 @@
         <div class="container">
             <div class="ip-content legal-card">
                 <h4 class="legal-title"><i class="fas fa-gavel"></i> Legal Notice</h4>
-                <p class="legal-text">All content, including images and materials on this website, is the property of Feltham Fun Holiday Club Ltd. Usage requires prior permission - contact <a href="mailto:info@felthamfunholidayclub.uk">info@felthamfunholidayclub.uk</a></p>
+                <p class="legal-text">All content, including images and materials on this website, is the property of Feltham Fun Holiday Club Ltd. Usage requires prior permission - contact <a href="mailto:contact@felthamfunholidayclub.uk">contact@felthamfunholidayclub.uk</a></p>
             </div>
         </div>
     </section>
@@ -699,7 +677,7 @@
                     <h4>Contact Info</h4>
                     <p><i class="fas fa-phone"></i> Vanashree Trivedi: <a href="tel:+447405337104">07405 337104</a></p>
                     <p><i class="fas fa-phone"></i> Elvia Acosta: <a href="tel:+447424776158">07424 776158</a></p>
-                    <p><i class="fas fa-envelope"></i> <a href="mailto:info@felthamfunholidayclub.uk">info@felthamfunholidayclub.uk</a></p>
+                    <p><i class="fas fa-envelope"></i> <a href="mailto:contact@felthamfunholidayclub.uk">contact@felthamfunholidayclub.uk</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
