Removed ofsted logo

--- a/index.html
+++ b/index.html
@@ -623,16 +623,19 @@
                 <div class="credibility-badges">
                     <div class="badge-item">
                         <a href="https://www.gov.uk/government/organisations/ofsted" target="_blank" rel="noopener noreferrer" class="credibility-link">
-                            <img src="images/ofsted-registered.png" alt="Ofsted Registered" class="credibility-badge">
-                            <h4>Ofsted Registered</h4>
-                            <p>Officially registered with Ofsted - No: 2866248</p>
+                            <div class="badge-content">
+                                <h4>Ofsted Registered</h4>
+                                <p>Officially registered with Ofsted - No: 2866250</p>
+                            </div>
                         </a>
                     </div>
                     <div class="badge-item">
                         <a href="https://www.hounslow.gov.uk/schools-colleges/holiday-activities-food-programme" target="_blank" rel="noopener noreferrer" class="credibility-link">
                             <img src="images/hounslow-haf.png" alt="Hounslow HAF Program" class="credibility-badge">
-                            <h4>HAF Program Partner</h4>
-                            <p>Successfully delivered HAF program in April 2025 and looking forward to future collaborations.</p>
+                            <div class="badge-content">
+                                <h4>HAF Program Partner</h4>
+                                <p>Successfully delivered HAF program in April 2025 and looking forward to future collaborations.</p>
+                            </div>
                         </a>
                     </div>
                 </div>
