Updated banner and event end time

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         </div>
     </section>
 
-    <!-- Promotional Banner -->
-    <section class="promo-banner">
+    <!-- Christmas Registration Banner (replaced Open Day) -->
+    <section class="promo-banner christmas-banner">
         <div class="container">
             <div class="promo-badge animated-badge">
                 <div class="promo-content">
@@ -88,11 +88,11 @@
                         <i class="fas fa-star sparkle-1"></i>
                         <i class="fas fa-star sparkle-2"></i>
                         <i class="fas fa-star sparkle-3"></i>
-                        <h3>✨ Open Day! ✨</h3>
-                        <p class="promo-date"><i class="fas fa-calendar-alt"></i> Sunday, 9th November 2025</p>
-                        <p class="promo-time"><i class="fas fa-clock"></i> 3:00 PM - 4:30 PM</p>
-                        <p class="promo-desc">Join us for a fun-filled session of activities and see what makes us special!</p>
-                        <a href="#contact" class="promo-cta pulse-button">Book Your Spot Now!</a>
+                        <h3>🎄 Christmas Holiday Club — Register Now!</h3>
+                        <p class="promo-date"><i class="fas fa-calendar-alt"></i> 22nd &amp; 23rd December 2025</p>
+                        <p class="promo-desc">Spaces are limited — secure your child's place for our festive activities and crafts.</p>
+                        <p class="promo-urgency"><strong>Register early to avoid disappointment — places fill up fast!</strong></p>
+                        <a href="#contact" class="promo-cta pulse-button">Register for Christmas</a>
                     </div>
                 </div>
             </div>
@@ -216,7 +216,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Christmas Craft Spectacular</h3>
-                                <p><i class="fas fa-clock"></i> 09:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 09:00 AM - 3:30 PM</p>
                                 <p>Create magical Christmas decorations, handmade gifts, and festive ornaments!</p>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Christmas Cookie & Games Day</h3>
-                                <p><i class="fas fa-clock"></i> 10:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 10:00 AM - 3:30 PM</p>
                                 <p>Bake and decorate delicious Christmas cookies while enjoying festive party games!</p>
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Creative Adventures</h3>
-                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:30 PM</p>
                                 <p>Start the half term with exciting arts, crafts, and creative activities!</p>
                             </div>
                         </div>
@@ -261,7 +261,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Sports & Games Day</h3>
-                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:30 PM</p>
                                 <p>A day filled with fun sports activities, team games, and active play!</p>
                             </div>
                         </div>
@@ -272,7 +272,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Science & Discovery</h3>
-                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:30 PM</p>
                                 <p>Explore exciting experiments and hands-on learning activities!</p>
                             </div>
                         </div>
@@ -295,7 +295,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Easter Arts & Crafts</h3>
-                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:30 PM</p>
                                 <p>Create beautiful Easter decorations and spring-themed crafts!</p>
                             </div>
                         </div>
@@ -306,7 +306,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Spring Games Day</h3>
-                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:30 PM</p>
                                 <p>Outdoor games and activities celebrating the spring season!</p>
                             </div>
                         </div>
@@ -317,7 +317,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Easter Egg Hunt</h3>
-                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:30 PM</p>
                                 <p>Join our exciting Easter egg hunt and festive celebrations!</p>
                             </div>
                         </div>
@@ -328,7 +328,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Spring Festival</h3>
-                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:30 PM</p>
                                 <p>A fun-filled day of spring activities and creative workshops!</p>
                             </div>
                         </div>
@@ -351,7 +351,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Summer Fun Kick-off</h3>
-                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:30 PM</p>
                                 <p>Welcome summer with outdoor games and creative activities!</p>
                             </div>
                         </div>
@@ -362,7 +362,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Nature Explorer Day</h3>
-                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:30 PM</p>
                                 <p>Discover nature through fun outdoor activities and crafts!</p>
                             </div>
                         </div>
@@ -373,7 +373,7 @@
                             </div>
                             <div class="event-details">
                                 <h3>Sports & Games Festival</h3>
-                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:00 PM</p>
+                                <p><i class="fas fa-clock"></i> 9:00 AM - 3:30 PM</p>
                                 <p>End the half term with exciting sports and team games!</p>
                             </div>
                         </div>
