--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             <div class="nav-menu">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="index.html#events" class="nav-link">Events</a>
-                <a href="index.html#gallery" class="nav-link">Gallery</a>
+                <a href="photos.html" class="nav-link">Photos</a>
                 <a href="index.html#contact" class="nav-link">Contact</a>
                 <a href="about.html" class="nav-link active">About</a>
             </div>
@@ -251,7 +251,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#events">Events</a></li>
-                        <li><a href="index.html#gallery">Gallery</a></li>
+                        <li><a href="photos.html">Photos</a></li>
                         <li><a href="index.html#contact">Contact</a></li>
                         <li><a href="about.html">About</a></li>
                     </ul>
